# ParamCurves

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CurvesTests/: CMakeLists.txt  CurvesTests.cpp
ParamCurves/: CMakeDummy.cpp  CMakeLists.txt  CatmullRomInterpolator.h  ClampInterpolator.h  ClampUpInterpolator.h  Interpolator.h  LinearInterpolator.h  ParamCurve.h
