CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(curvesTests_SRCS 
	CurvesTests.cpp
)

INCLUDE_DIRECTORIES(Include 
	../ParamCurves
)

IF(XCODE)
	ADD_EXECUTABLE(CurvesTests MACOSX_BUNDLE ${curvesTests_SRCS})
ELSE(XCODE)
	ADD_EXECUTABLE(CurvesTests ${curvesTests_SRCS})
ENDIF(XCODE)

TARGET_LINK_LIBRARIES(ParamCurves)

IF(MSVC)
	# Enable some linker optimisations
	SET_TARGET_PROPERTIES(CurvesTests PROPERTIES LINK_FLAGS_RELEASE "/OPT:REF /OPT:ICF")
	SET_TARGET_PROPERTIES(CurvesTests PROPERTIES LINK_FLAGS_MINSIZEREL "/OPT:REF /OPT:ICF")
	SET_TARGET_PROPERTIES(CurvesTests PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/OPT:REF /OPT:ICF")
ENDIF(MSVC)

SET(EXECUTABLE_OUTPUT_PATH ${ParamCurves_SOURCE_DIR}/bin/CurvesTests)

